fix: Make sure nav is displayed correclty
Fix the issue: Navbar is too small or big on different screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,15 @@ textarea {
   position: fixed;
 }
 
+.nav-item {
+  height: 100%;
+  max-height: 20vh;
+}
+
 .nav-link,
 .nav-link-content {
   display: block;
+  height: 100%;
 }
 
 .nav-link {
@@ -99,8 +105,10 @@ textarea {
 }
 
 .nav-link-content {
-  padding: 12% 0 12% 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.397);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex {
